2000-06-12  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11867: Src/builtin.c, Src/params.c, Src/zsh.h,
	Doc/Zsh/builtins.yo: don't use -H flag for parameters mentioned
	explicitly or by pattern.

2000-06-11  Bart Schaefer  <schaefer@zsh.org>

	* 11866: Functions/Misc/colors, Functions/Prompts/promptinit:  Set
	up color/colour assoc arrays to map the full range of ANSI text
	properties; preserve more state during themed prompt previewing.

	* Alexandre: 11864: Src/Zle/complist.c: Shift an array the opposite
	way to fix colored listings crash.

2000-06-11  Tanaka Akira  <akr@zsh.org>

	* 11861: Completion/User/_cvs: fix -a use for compadd.

2000-06-10  Bart Schaefer  <schaefer@zsh.org>

	* 11850: Src/Zle/complist.c: Don't try to menuselect in a listing
	that isn't there, e.g., because the TERM is too dumb to draw it.

2000-06-09  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11842 (repeat of 11838): Doc/Zsh/builtins.yo, Src/builtin.c,
	Src/params.c, Src/subst.c, Src/zsh.h, Src/Modules/mapfile.c,
	Src/Modules/parameter.c: add the HIDEVAL parameter attribute and
	set it by default for parameters created by the mapfile and
	parameter modules, to restore sanity of `typeset' output.

2000-06-09  Clint Adams  <schizo@debian.org>

	* 11839: Src/signals.c: prevent segmentation fault in
	endtrapscope() by not dereferencing null pointers.

2000-06-09  Sven Wischnowsky  <wischnow@zsh.org>

	* 11836: Src/Zle/compcore.c, Src/Zle/complist.c: fix for
 	menu-completion when another completion came right after it
	
	* 11833: Completion/Core/_path_files, Src/Zle/computil.c: improve
 	_path_files, move some code into C, try to optimise glob patterns
 	and immediately accept exact directory matches
	
2000-06-08  Oliver Kiddle  <opk@zsh.org>

	* 11823: Doc/Makefile.in, Completion/User/_urls: avoid bug in
	IRIX's sed and use new -K option to zparseopts in _urls

2000-06-08  Peter Stephenson  <pws@cambridgesiliconradio.com>
