@@ -1,3 +1,11 @@
+2000-06-13  Sven Wischnowsky  <wischnow@zsh.org>
+
+	* ?????: Completion/Core/_path_files, Src/Zle/complete.c,
+ 	Src/Zle/compmatch.c, Src/Zle/computil.c: fixes for calling
+	compfiles, for completing words with special characters; make
+	compfiles optimisations work with globcomplete and simple match
+	specs
+
 2000-06-12  Peter Stephenson  <pws@cambridgesiliconradio.com>
 
 	* 11867: Src/builtin.c, Src/params.c, Src/zsh.h,
